added cheat sheet to repo for sklearn

--- a/titanic.ipynb
+++ b/titanic.ipynb
@@ -45,7 +45,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Import Data"
+    "# Read Data"
    ]
   },
   {
@@ -637,6 +637,8 @@
     "-  Parch\n",
     "-  Sbsp\n",
     "\n",
+    "And Fare appears to be a bit too influential. I imagine this will be problematic.\n",
+    "\n",
     "We will drop these as features for now, though we may return and do some data wrangling if needed."
    ]
   },
@@ -649,11 +651,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
-    "feature_cols = ['Pclass','Sex','Age','Fare', 'Survived']\n",
+    "feature_cols = ['Pclass','Sex','Age','Survived']\n",
     "num_cols = [col for col in feature_cols if train[col].dtypes in ['int64','float64']]\n",
     "cat_cols = [col for col in feature_cols if train[col].dtypes in ['object']]\n",
     "modeling_cols = num_cols + cat_cols"
@@ -661,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -671,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -680,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -690,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -701,13 +703,26 @@
        "Name: Survived, dtype: float64"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "y.value_counts(normalize=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Modeling\n",
+    "\n",
+    "So this will be shamefully stolen from a youtuber named ar_t_e_m_is. I am still learning what each model does and how best to use them. I will attempt the first model myself, based on this cheat sheet, then deploy his technique and see if I can't get some more insight about what each model is doing. According to the cheat sheet, we should be trying `Linear SVC`. So lets start with that one, and try some others if it does not work.\n",
+    "\n",
+    "<div>\n",
+    "<img src=\"sklearn_cheat_sheet.jpg\" width=\"1200\"/>\n",
+    "</div>"
    ]
   },
   {
