initial models tested

--- a/titanic.ipynb
+++ b/titanic.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,11 +34,18 @@
     "import plotly.express as px\n",
     "\n",
     "# Models\n",
-    "import sklearn\n",
-    "from sklearn.preprocessing import RobustScaler\n",
     "from sklearn.preprocessing import OneHotEncoder\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.ensemble import RandomForestClassifier\n"
+    "from sklearn.svm import LinearSVC\n",
+    "from sklearn.naive_bayes import GaussianNB\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "\n",
+    "# Metrics\n",
+    "from sklearn.metrics import balanced_accuracy_score\n",
+    "from sklearn.metrics import f1_score\n",
+    "\n",
+    "# Time\n",
+    "import time"
    ]
   },
   {
@@ -50,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +75,7 @@
        "False"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +338,7 @@
        "[891 rows x 12 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +370,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -546,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -633,29 +640,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Too many outliers in the following that may affect the model:\n",
-    "-  Parch\n",
-    "-  Sbsp\n",
-    "\n",
-    "And Fare appears to be a bit too influential. I imagine this will be problematic.\n",
-    "\n",
-    "We will drop these as features for now, though we may return and do some data wrangling if needed."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Data Prep"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
-    "feature_cols = ['Pclass','Sex','Age','Survived']\n",
+    "feature_cols = ['Fare','Pclass','Sex','Age','Parch','SibSp','Survived']\n",
     "num_cols = [col for col in feature_cols if train[col].dtypes in ['int64','float64']]\n",
     "cat_cols = [col for col in feature_cols if train[col].dtypes in ['object']]\n",
     "modeling_cols = num_cols + cat_cols"
@@ -663,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -673,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -681,8 +675,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Couple of NaNs in the Age data. Need to drop them"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "modeling_data.dropna(inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -692,18 +702,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0    0.616162\n",
-       "1    0.383838\n",
+       "0    0.593838\n",
+       "1    0.406162\n",
        "Name: Survived, dtype: float64"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -727,31 +737,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def TestClassifiers(train_data, train_classes, test_data, test_classes, classifiers):\n",
+    "    res = {}\n",
+    "    for clf in classifiers:\n",
+    "        name = clf.__class__.__name__\n",
+    "\n",
+    "        start_time = time.time()\n",
+    "        clf.fit(train_data, train_classes)\n",
+    "\n",
+    "        acc = round(balanced_accuracy_score(test_classes, clf.predict(test_data)), 3)\n",
+    "        f1 = round(f1_score(y_true=test_classes, y_pred=clf.predict(test_data), average='weighted'), 3)\n",
+    "        stop_time = time.time()\n",
+    "\n",
+    "        time_to_run = round(stop_time - start_time, 3)\n",
+    "\n",
+    "        print(\"{} trained in {} with an F1 of : {} and an accuracy of: {}\".format(name, time_to_run, f1, acc))\n",
+    "\n",
+    "        res[name] = (acc, f1, time_to_run, clf)\n",
+    "\n",
+    "    return res\n",
+    "        "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "classifiers = [LinearSVC(),\n",
+    "                GaussianNB()]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Xtrain, Xtest, ytrain, ytest = train_test_split(X, y, stratify=y, test_size=0.2, random_state=100)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LinearSVC trained in 0.034 with an F1 of : 0.769 and an accuracy of: 0.744\n",
+      "GaussianNB trained in 0.006 with an F1 of : 0.79 and an accuracy of: 0.782\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/mattgpaul/Documents/Python Projects/Titanic/lib/python3.10/site-packages/sklearn/svm/_base.py:1225: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "classifier_results = TestClassifiers(Xtrain, ytrain, Xtest, ytest, classifiers)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Results\n",
+    "\n",
+    "Based on my minimal understanding, looks like NB is the winner here. Obviously, we are going to keep tuning the models to improve the score, but out of curiosity, we will submit the results for NB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'LinearSVC': (0.744, 0.769, 0.034, LinearSVC()),\n",
+       " 'GaussianNB': (0.782, 0.79, 0.006, GaussianNB())}"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "classifier_results"
+   ]
   },
   {
    "cell_type": "code",
