--- a/titanic.ipynb
+++ b/titanic.ipynb
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -657,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -667,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -683,16 +683,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [],
    "source": [
-    "modeling_data.dropna(inplace=True)"
+    "modeling_data.bfill(inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -702,18 +702,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0    0.593838\n",
-       "1    0.406162\n",
+       "0    0.616162\n",
+       "1    0.383838\n",
        "Name: Survived, dtype: float64"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 211,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -737,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -765,17 +765,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [],
    "source": [
-    "classifiers = [LinearSVC(),\n",
+    "classifiers = [LinearSVC(dual=False, max_iter=1000),\n",
     "                GaussianNB()]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -784,23 +784,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LinearSVC trained in 0.034 with an F1 of : 0.769 and an accuracy of: 0.744\n",
-      "GaussianNB trained in 0.006 with an F1 of : 0.79 and an accuracy of: 0.782\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/mattgpaul/Documents/Python Projects/Titanic/lib/python3.10/site-packages/sklearn/svm/_base.py:1225: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
-      "  warnings.warn(\n"
+      "LinearSVC trained in 0.009 with an F1 of : 0.799 and an accuracy of: 0.79\n",
+      "GaussianNB trained in 0.007 with an F1 of : 0.816 and an accuracy of: 0.809\n"
      ]
     }
    ],
@@ -819,17 +811,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'LinearSVC': (0.744, 0.769, 0.034, LinearSVC()),\n",
-       " 'GaussianNB': (0.782, 0.79, 0.006, GaussianNB())}"
+       "{'LinearSVC': (0.788, 0.799, 0.041, LinearSVC()),\n",
+       " 'GaussianNB': (0.809, 0.816, 0.006, GaussianNB())}"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 141,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -837,6 +829,187 @@
    "source": [
     "classifier_results"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "submission_data = pd.read_csv('/home/mattgpaul/Documents/Python Projects/Titanic/data/test.csv')\n",
+    "submission_data.ffill(inplace=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "submission_encoded = pd.DataFrame(data=ohe.fit_transform(submission_data[cat_cols]), columns=ohe.get_feature_names_out())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "submission_modeling_data = pd.concat([submission_data[num_cols[:-1]], submission_encoded], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "submission_modeling_data.dropna(inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "submission_results = classifier_results['GaussianNB'][-1].predict(submission_modeling_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PassengerId</th>\n",
+       "      <th>Survived</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>892</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>893</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>894</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>895</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>896</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>413</th>\n",
+       "      <td>1305</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>414</th>\n",
+       "      <td>1306</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>415</th>\n",
+       "      <td>1307</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>416</th>\n",
+       "      <td>1308</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>417</th>\n",
+       "      <td>1309</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>418 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     PassengerId  Survived\n",
+       "0            892         0\n",
+       "1            893         1\n",
+       "2            894         0\n",
+       "3            895         0\n",
+       "4            896         1\n",
+       "..           ...       ...\n",
+       "413         1305         0\n",
+       "414         1306         1\n",
+       "415         1307         0\n",
+       "416         1308         0\n",
+       "417         1309         0\n",
+       "\n",
+       "[418 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 151,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "to_submit = submission_data['PassengerId'].to_frame()\n",
+    "to_submit['Survived'] = submission_results\n",
+    "to_submit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "to_submit.to_csv('submitme', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
