grandiant boosting yields 0.845

--- a/titanic.ipynb
+++ b/titanic.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,15 +33,22 @@
     "import plotly.graph_objects as go\n",
     "import plotly.express as px\n",
     "\n",
-    "# Models\n",
+    "# Preprocessors\n",
     "from sklearn.preprocessing import OneHotEncoder\n",
     "from sklearn.preprocessing import Normalizer\n",
     "from sklearn.preprocessing import PowerTransformer\n",
     "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "# Models\n",
     "from sklearn.svm import LinearSVC\n",
     "from sklearn.naive_bayes import GaussianNB\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.ensemble import ExtraTreesClassifier\n",
+    "from sklearn.ensemble import GradientBoostingClassifier\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.linear_model import RidgeClassifier\n",
     "\n",
     "# Metrics\n",
     "from sklearn.metrics import balanced_accuracy_score\n",
@@ -1317,20 +1324,40 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-  LinearSVC\n",
+    "-  GaussianNB\n",
+    "-  KNeighborsClassifier\n",
+    "-  RandomForestClassifier\n",
+    "-  ExtraTreesClassifier\n",
+    "-  GradientBoostingClassifier\n",
+    "-  DecisionTreeClassifier\n",
+    "-  LogisticRegression\n",
+    "-  RidgeClassifier"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
     "classifiers = [LinearSVC(dual=False, max_iter=1000),\n",
     "                GaussianNB(),\n",
     "                KNeighborsClassifier(),\n",
-    "                RandomForestClassifier(n_estimators=10)]"
+    "                RandomForestClassifier(class_weight='balanced_subsample', random_state=100),\n",
+    "                ExtraTreesClassifier(class_weight='balanced_subsample', random_state=100),\n",
+    "                GradientBoostingClassifier(random_state=100),\n",
+    "                LogisticRegression(random_state=100),\n",
+    "                RidgeClassifier(random_state=100)\n",
+    "                ]   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1339,17 +1366,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LinearSVC trained in 0.009 with an F1 of : 0.822 and an accuracy of: 0.814\n",
-      "GaussianNB trained in 0.007 with an F1 of : 0.796 and an accuracy of: 0.805\n",
+      "LinearSVC trained in 0.007 with an F1 of : 0.822 and an accuracy of: 0.814\n",
+      "GaussianNB trained in 0.006 with an F1 of : 0.796 and an accuracy of: 0.805\n",
       "KNeighborsClassifier trained in 0.022 with an F1 of : 0.784 and an accuracy of: 0.782\n",
-      "RandomForestClassifier trained in 0.027 with an F1 of : 0.845 and an accuracy of: 0.843\n"
+      "RandomForestClassifier trained in 0.139 with an F1 of : 0.834 and an accuracy of: 0.834\n"
      ]
     },
     {
@@ -1360,6 +1387,16 @@
       "  mode, _ = stats.mode(_y[neigh_ind, k], axis=1)\n",
       "/home/mattgpaul/Documents/Python Projects/Titanic/lib/python3.10/site-packages/sklearn/neighbors/_classification.py:237: FutureWarning: Unlike other reduction functions (e.g. `skew`, `kurtosis`), the default behavior of `mode` typically preserves the axis it acts along. In SciPy 1.11.0, this behavior will change: the default value of `keepdims` will become False, the `axis` over which the statistic is taken will be eliminated, and the value None will no longer be accepted. Set `keepdims` to True or False to avoid this warning.\n",
       "  mode, _ = stats.mode(_y[neigh_ind, k], axis=1)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ExtraTreesClassifier trained in 0.091 with an F1 of : 0.796 and an accuracy of: 0.802\n",
+      "GradientBoostingClassifier trained in 0.061 with an F1 of : 0.85 and an accuracy of: 0.845\n",
+      "LogisticRegression trained in 0.006 with an F1 of : 0.811 and an accuracy of: 0.805\n",
+      "RidgeClassifier trained in 0.005 with an F1 of : 0.805 and an accuracy of: 0.798\n"
      ]
     }
    ],
@@ -1454,7 +1491,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "odels"
+   ]
   }
  ],
  "metadata": {
